JBTM-3588 modular jdk args and disable some tests